"prevent overflow on laptops, margin on nav activity button changed"

--- a/frontend/src/app/components/activityTypes/_activity.scss
+++ b/frontend/src/app/components/activityTypes/_activity.scss
@@ -210,7 +210,7 @@
     color: $secondary-font-color;
     background-color: $purple;
     padding: 0.4rem 1.2rem;
-    margin: 1.2rem 0;
+    margin: 1.1rem 0;
     border: 1px $secondary-font-color solid;
     @include transition(all 0.3s ease-out);
 }  
